# fish-s2-mlx

./: .gitignore  CHANGELOG.md  NOTICE  README.md  app.py  pyproject.toml  requirements.txt
src/fish_s2_mlx/: __init__.py  app.py  audio.py  cache.py  config.py  constants.py  generator.py  memory.py  model_manager.py  settings.py  text.py  ui.py
